--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,40 @@ body {
 h1,
 h2 {
   font-weight: normal;
+  text-align: center;
 }
 
 h1 {
   line-height: 1.25em;
 }
 
-.views > div {
+#iphone {
+  border: 2px solid #000;
+  border-radius: 5em;
+  margin: 5em auto;
+  padding: 10em 2.5em;
+  height: 1136px;
+  width: 640px;
+}
+
+.views {
+  background: #777;
+  border: 1px solid #000;
+  height: 1136px;
+  width: 640px;
   position: relative;
-  top: 0;
+}
+
+.views > div {
+  position: absolute;
+  bottom: 0;
   left: 0;
 
   display: none;
 
   background-repeat: no-repeat;
-  height: 1280px;
-  width: 720px;
+  height: 1096px;
+  width: 640px;
 }
 
 .views > div > div {
