--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,36 @@ h1 {
 }
 
 #iphone {
-  border: 2px solid #000;
+  border: 3px solid #000;
   border-radius: 5em;
   margin: 5em auto;
-  padding: 10em 2.5em;
+  padding: 10em 2em;
   height: 1136px;
   width: 640px;
 }
 
+  #iphone::after {
+    content: "";
+    display: block;
+
+    border-radius: 50%;
+    border: 2px solid #000;
+    height: 100px;
+    width: 100px;
+
+    position: relative;
+    bottom: -25px;
+    left: 50%;
+    margin-left: -50px;
+  }
+
 .views {
   background: #777;
-  border: 1px solid #000;
+  border: 2px solid #000;
+
+  position: relative;
   height: 1136px;
   width: 640px;
-  position: relative;
 }
 
 .views > div {
