--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ h1 {
   position: absolute;
 
   background-color: rgba(0,255,0,.2);
+  border: 1px solid rgba(0,255,0,.5);
   transition: background-color 0.3s;
   display: block;
 
@@ -78,7 +79,8 @@ h1 {
   background-image: url(../img/home/home.png);
 }
 
-  #home-estimate-toggle {
+  #home-estimate-toggle,
+  #home-estimate-back {
     left: 49px;
     top: 158px;
 
@@ -128,6 +130,37 @@ h1 {
   background-image: url(../img/home/add.png);
 }
 
+  #home-add-close {
+    left: 29px;
+    top: 270px;
+
+    height: 74px;
+    width: 74px;
+  }
+
+  #home-add-glucose {
+    left: 70px;
+    top: 404px;
+
+    height: 102px;
+    width: 500px;
+  }
+
+  #home-add-meal {
+    left: 70px;
+    top: 528px;
+
+    height: 102px;
+    width: 500px;
+  }
+
+  #home-add-exercise {
+    left: 70px;
+    top: 658px;
+
+    height: 102px;
+    width: 500px;
+  }
 
 #home-instructions {
   background-image: url(../img/home/instructions.png);
@@ -145,8 +178,101 @@ h1 {
   background-image: url(../img/home/menu.png);
 }
 
+  #home-menu-settings {
+    left: 5px;
+    bottom: 368px;
+
+    height: 99px;
+    width: 627px;
+  }
+
+  #home-menu-reminders {
+    left: 5px;
+    bottom: 257px;
+
+    height: 99px;
+    width: 627px;
+  }
+
+  #home-menu-passcode {
+    left: 5px;
+    bottom: 149px;
+
+    height: 99px;
+    width: 627px;
+  }
+
+  #home-menu-cancel {
+    left: 5px;
+    bottom: 22px;
+
+    height: 99px;
+    width: 627px;
+  }
 
 #home-trends {
   background-image: url(../img/home/other_trends.png);
 }
+
+  #home-trends-close {
+    left: 14px;
+    top: 300px;
+
+    height: 74px;
+    width: 74px;
+  }
+
+  #home-trends-glucose {
+    left: 57px;
+    top: 427px;
+
+    height: 92px;
+    width: 526px;
+  }
+
+  #home-trends-food {
+    left: 57px;
+    top: 521px;
+
+    height: 92px;
+    width: 526px;
+  }
+
+  #home-trends-exercise {
+    left: 57px;
+    top: 616px;
+
+    height: 92px;
+    width: 526px;
+  }
+
+
+/* Passcode */
+
+#passcode {
+  background-image: url(../img/passcode/passcode.png);
+}
+
+  #passcode-back {
+    left: 5px;
+    top: 5px;
+
+    height: 90px;
+    width: 90px;
+  }
+
+
+/* Settings */
+
+#settings {
+  background-image: url(../img/settings/settings.png);
+}
+
+  #settings-back {
+    left: 5px;
+    top: 5px;
+
+    height: 90px;
+    width: 90px;
+  }
 
