--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,6 @@ h1 {
     bottom: 7px;
   }
 
-
 #tutorial-progress {
   background-image: url(../img/tutorial/progress.png);
 }
@@ -190,6 +189,7 @@ h1 {
     right: 5px;
     bottom: 12px;
   }
+
 
 /* Home page */
 
@@ -550,3 +550,86 @@ h1 {
     height: 68px;
     width: 595px;
   }
+
+
+/* Reminders */
+#reminders {
+  background-image: url(../img/reminders/list.png);
+}
+
+  #reminders-back {
+    left: 5px;
+    top: 5px;
+
+    height: 90px;
+    width: 90px;
+  }
+
+  #reminder-example {
+    left: 26px;
+    top: 173px;
+
+    height: 119px;
+    width: 590px;
+  }
+
+#reminder-details {
+  background-image: url(../img/reminders/details.png);
+}
+
+  #reminder-details-back {
+    left: 5px;
+    top: 5px;
+
+    height: 90px;
+    width: 90px;
+  }
+
+  #reminder-details-settings {
+    left: 1px;
+    top: 412px;
+
+    height: 131px;
+    width: 636px;
+  }
+
+#reminder-details-repeat {
+  background-image: url(../img/reminders/repeat_settings.png);
+}
+
+  #reminder-details-repeat-close {
+    right: 17px;
+    top: 250px;
+
+    height: 74px;
+    width: 74px;
+  }
+
+  #reminder-details-repeat-time {
+    right: 46px;
+    bottom: 280px;
+
+    height: 80px;
+    width: 277px;
+  }
+
+#reminder-details-time {
+  background-image: url(../img/reminders/time_settings.png);
+}
+
+  #reminder-details-time-close {
+    right: 17px;
+    top: 250px;
+
+    height: 74px;
+    width: 74px;
+  }
+
+  #reminder-details-time-repeat {
+    left: 52px;
+    bottom: 280px;
+
+    height: 80px;
+    width: 263px;
+  }
+
