Use new add reminders view

--- a/css/style.css
+++ b/css/style.css
@@ -663,7 +663,7 @@ h1 {
   }
 
 #reminders-add {
-  background-image: url(../img/reminders/list.png);
+  background-image: url(../img/reminders/add.png);
 }
 
 #reminders {
